[package]
name = "tauri-plugin-printer-sujin999"
version = "1.0.15"
edition = "2021"
authors = ["Sujin Park, Original author: Alfian Lensun"]
description = "Tauri Plugin for printer access (Edit)"
readme = "README.md"
rust-version = "1.60"
exclude = ["/examples"]
keywords = []
categories = [
    "os",
    "os::windows-apis"
]
license = "MIT"


[dependencies]
base64 = "0.21.2"
tauri = { version = "1.3", features = ["shell-all", "window-create","window-close", "window-data-url", "http-all"] }

